--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,8 +3,8 @@
 body {
   display: grid;
   place-items: center;
-  font-family: monospace;
-  overflow: hidden;
+  font-family: sans-serif;
+  font-size: 10pt;
 }
 
 h1 {
@@ -15,24 +15,33 @@ h1 {
 h2 {
   font-size: 1rem;
   font-weight: bold;
+  margin: 0;
+  margin-bottom: 0.5rem;
 }
 
 p {
-  word-break:break-all;
+  word-break: normal;
+  margin: 0.5rem 0;
 }
 
 .person {
   max-width: 500px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 1rem;
   justify-content:center;
+  overflow: hidden;
 }
 
 .firstRow {
   display: inline-flex;
   flex-direction: row;
   gap: 12px;
+  max-height: max-content;
+}
+
+.firstRow p {
+  margin: 0.25rem 0;
 }
 
 .image {
@@ -40,6 +49,8 @@ p {
   aspect-ratio: 1/1;
   object-fit: cover;
   object-position: center;
+  max-height: 25vh;
+  margin: 0;
 }
 
 .mainData {
@@ -48,5 +59,36 @@ p {
 }
 
 .contact {
+  margin: 0.5rem 0;
+}
 
+.contact h3 {
+  padding: 0.5rem;
+  margin: 0;
+}
+
+.table {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin: 0.5rem 0;
+  place-items: baseline;
+}
+
+.table p {
+  margin: 0.25rem 0.5rem 0.25rem 0;
+}
+
+.table > img {
+  max-height: 1rem;
+  margin: 0.5rem 2rem;
+}
+
+.color-box {
+    width: 1rem;
+    height: 1rem;
+    display: inline-block;
+    background-color: #ccc;
+    left: 5px;
+    top: 5px;
+    margin: 0.25rem 0;
 }
