use imageURI from _data

--- a/src/persons.njk
+++ b/src/persons.njk
@@ -23,7 +23,7 @@ body {
 }
 </style>
 <section class="firstRow">
-    <img class="image" src="https://placedog.net/500" alt="A image of a person who dont exist.">
+    <img class="image" src={{person.imgURI}} alt="A image of a person who dont exist.">
     <div class="mainData">
         <h2>{{ person.main.firstName }}</h2>
         <p>Entry created: <br/>{{person.main.birthdate}}</p>
